--- a/da.API/da.API.csproj
+++ b/da.API/da.API.csproj
@@ -6,5 +6,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.1"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.1"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.1"/>
   </ItemGroup>
 </Project>
